@@ -11,6 +11,7 @@ import ua.com.fielden.platform.entity.exceptions.EntityDefinitionException;
 import ua.com.fielden.platform.entity.exceptions.EntityException;
 import ua.com.fielden.platform.entity.factory.EntityFactory;
 import ua.com.fielden.platform.entity.factory.IMetaPropertyFactory;
+import ua.com.fielden.platform.entity.ioc.ObservableMutatorInterceptor;
 import ua.com.fielden.platform.entity.meta.MetaProperty;
 import ua.com.fielden.platform.entity.proxy.EntityProxyContainer;
 import ua.com.fielden.platform.entity.validation.DomainValidationConfig;
@@ -105,12 +106,12 @@ public class AbstractEntityTest {
         // try to assign null
         entity.setFirstProperty(null);
         assertFalse("Property validation failed.", entity.getProperty("firstProperty").isValid());
-        assertEquals("Value assignment should have been prevented by the validator,", new Integer(60), entity.getFirstProperty());
+        assertEquals("Value assignment should have been prevented by the validator,", Integer.valueOf(60), entity.getFirstProperty());
         // try to assign value less than 50
         entity.setFirstProperty(23);
         assertFalse("Property validation failed.", entity.getProperty("firstProperty").isValid());
-        assertEquals("Value assignment should have been prevented by the validator,", new Integer(60), entity.getFirstProperty());
-        assertEquals("Incorrect value for last invalid value.", new Integer(23), entity.getProperty("firstProperty").getLastInvalidValue());
+        assertEquals("Value assignment should have been prevented by the validator,", Integer.valueOf(60), entity.getFirstProperty());
+        assertEquals("Incorrect value for last invalid value.", Integer.valueOf(23), entity.getProperty("firstProperty").getLastInvalidValue());
     }
 
     @Test
@@ -141,7 +142,7 @@ public class AbstractEntityTest {
     public void persistentOnly_final_property_for_non_persistent_entity_yields_invalid_definition() {
         final Either<Exception, EntityInvalidDefinition> result = Try(() -> factory.newEntity(EntityInvalidDefinition.class, "key", "desc"));
         assertTrue(result instanceof Left);
-        final Throwable rootCause = ExceptionUtils.getRootCause(((Left<Exception, EntityInvalidDefinition>) result).value);
+        final Throwable rootCause = ExceptionUtils.getRootCause(((Left<Exception, EntityInvalidDefinition>) result).value());
         assertTrue(rootCause instanceof EntityDefinitionException);
         assertEquals(format("Non-persistent entity [%s] has property [%s], which is incorrectly annotated with @Final(persistentOnly = true).", EntityInvalidDefinition.class.getSimpleName(), "firstProperty"),
                 rootCause.getMessage());
@@ -224,7 +225,7 @@ public class AbstractEntityTest {
      * <ul>
      * <li>meta-property has correct validators (determination of validators is done by {@link IMetaPropertyFactory})
      * <li>changes done through mutators are observed
-     * <li>validators are provided with correct values (this is actually done by {@link ValidationMutatorInterceptor})), which is checked indirectly
+     * <li>validators are provided with correct values (this is actually done by {@link ObservableMutatorInterceptor})), which is checked indirectly
      * </ul>
      */
     @Test
@@ -260,7 +261,7 @@ public class AbstractEntityTest {
      * <ul>
      * <li>meta-property has correct validators (determination of validators is done by {@link IMetaPropertyFactory})
      * <li>changes done through mutators are observed
-     * <li>validators are provided with correct values (this is actually done by {@link ValidationMutatorInterceptor})), which is checked indirectly
+     * <li>validators are provided with correct values (this is actually done by {@link ObservableMutatorInterceptor})), which is checked indirectly
      * </ul>
      */
     @Test
@@ -294,7 +295,7 @@ public class AbstractEntityTest {
      * <ul>
      * <li>meta-property has correct validators (determination of validators is done by {@link IMetaPropertyFactory})
      * <li>changes done through mutators are observed
-     * <li>validators are provided with correct values (this is actually done by {@link ValidationMutatorInterceptor})), which is checked indirectly
+     * <li>validators are provided with correct values (this is actually done by {@link ObservableMutatorInterceptor})), which is checked indirectly
      * </ul>
      */
     @Test
@@ -1082,7 +1083,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidMoneyPropWithPrecision> result = Try(() -> factory.newByKey(EntityWithInvalidMoneyPropWithPrecision.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidMoneyPropWithPrecision> left = (Left<Exception, EntityWithInvalidMoneyPropWithPrecision>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_USE_FOR_PRECITION_AND_SCALE_MSG, "numericMoney", EntityWithInvalidMoneyPropWithPrecision.class.getName()), ex.getMessage());
     }
@@ -1092,7 +1093,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidMoneyPropWithScale> result = Try(() -> factory.newByKey(EntityWithInvalidMoneyPropWithScale.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidMoneyPropWithScale> left = (Left<Exception, EntityWithInvalidMoneyPropWithScale>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_USE_FOR_PRECITION_AND_SCALE_MSG, "numericMoney", EntityWithInvalidMoneyPropWithScale.class.getName()), ex.getMessage());
     }
@@ -1102,7 +1103,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidMoneyPropWithNegativePrecisionAndPositiveScale> result = Try(() -> factory.newByKey(EntityWithInvalidMoneyPropWithNegativePrecisionAndPositiveScale.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidMoneyPropWithNegativePrecisionAndPositiveScale> left = (Left<Exception, EntityWithInvalidMoneyPropWithNegativePrecisionAndPositiveScale>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_USE_FOR_PRECITION_AND_SCALE_MSG, "numericMoney", EntityWithInvalidMoneyPropWithNegativePrecisionAndPositiveScale.class.getName()), ex.getMessage());
     }
@@ -1112,7 +1113,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidMoneyPropWithPositivePrecisionAndNegativeScale> result = Try(() -> factory.newByKey(EntityWithInvalidMoneyPropWithPositivePrecisionAndNegativeScale.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidMoneyPropWithPositivePrecisionAndNegativeScale> left = (Left<Exception, EntityWithInvalidMoneyPropWithPositivePrecisionAndNegativeScale>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_USE_FOR_PRECITION_AND_SCALE_MSG, "numericMoney", EntityWithInvalidMoneyPropWithPositivePrecisionAndNegativeScale.class.getName()), ex.getMessage());
     }
@@ -1122,7 +1123,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidMoneyPropWithLength> result = Try(() -> factory.newByKey(EntityWithInvalidMoneyPropWithLength.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidMoneyPropWithLength> left = (Left<Exception, EntityWithInvalidMoneyPropWithLength>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_USE_OF_PARAM_LENGTH_MSG, "numericMoney", EntityWithInvalidMoneyPropWithLength.class.getName()), ex.getMessage());
     }
@@ -1132,7 +1133,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidIntegerProp> result = Try(() -> factory.newByKey(EntityWithInvalidIntegerProp.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidIntegerProp> left = (Left<Exception, EntityWithInvalidIntegerProp>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_VALUES_FOR_PRECITION_AND_SCALE_MSG, "numericInteger", EntityWithInvalidIntegerProp.class.getName()), ex.getMessage());
     }
@@ -1142,7 +1143,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidStringPropWithTrailingZeros> result = Try(() -> factory.newByKey(EntityWithInvalidStringPropWithTrailingZeros.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidStringPropWithTrailingZeros> left = (Left<Exception, EntityWithInvalidStringPropWithTrailingZeros>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_USE_OF_NUMERIC_PARAMS_MSG, "stringProp", EntityWithInvalidStringPropWithTrailingZeros.class.getName()), ex.getMessage());
     }
@@ -1152,7 +1153,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidStringPropWithPrecision> result = Try(() -> factory.newByKey(EntityWithInvalidStringPropWithPrecision.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidStringPropWithPrecision> left = (Left<Exception, EntityWithInvalidStringPropWithPrecision>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_USE_OF_NUMERIC_PARAMS_MSG, "stringProp", EntityWithInvalidStringPropWithPrecision.class.getName()), ex.getMessage());
     }
@@ -1162,7 +1163,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidStringPropWithScale> result = Try(() -> factory.newByKey(EntityWithInvalidStringPropWithScale.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidStringPropWithScale> left = (Left<Exception, EntityWithInvalidStringPropWithScale>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_USE_OF_NUMERIC_PARAMS_MSG, "stringProp", EntityWithInvalidStringPropWithScale.class.getName()), ex.getMessage());
     }
